add jwt tokens
