# src/main/java/com/api/chatstack/controllers/AuthenticationController.java
@@ -1,19 +1,24 @@
 package com.api.chatstack.controllers;
 
-import com.api.chatstack.entities.UserEntity;
-import com.api.chatstack.enums.LoginType;
-import com.api.chatstack.exception.ChatStackException;
+import com.api.chatstack.mappers.UserMapper;
 import com.api.chatstack.services.AuthenticationService;
 import com.chatstack.api.AuthenticationFlowApi;
 import com.chatstack.dto.*;
 import jakarta.mail.MessagingException;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.context.request.RequestContextHolder;
+import org.springframework.web.context.request.ServletRequestAttributes;
 
 import java.io.IOException;
+import java.time.Duration;
+import java.util.Objects;
 
 @RequiredArgsConstructor
 @RestController
@@ -21,6 +26,7 @@ import java.io.IOException;
 public class AuthenticationController implements AuthenticationFlowApi {
 
     private final AuthenticationService authService;
+    private final UserMapper userMapper;
 
     @Override
     public ResponseEntity<Void> authChangePassword(AuthChangePasswordRequest authChangePasswordRequest) {
@@ -31,12 +37,27 @@ public class AuthenticationController implements AuthenticationFlowApi {
     public ResponseEntity<Void> authForgotPassword(AuthResendVerificationRequest authResendVerificationRequest) {
         return null;
     }
-
     @Override
 //    login request either: password or provider
-    public ResponseEntity<User> authLogin(LoginRequest loginRequest) {
-        User loggedUser = authService.login(loginRequest);
-        return ResponseEntity.status(HttpStatus.OK).body(loggedUser);
+    public ResponseEntity<AuthResponse> authLogin(LoginRequest loginRequest) {
+        AuthResult result = authService.login(loginRequest);
+        ResponseCookie refreshCookie = ResponseCookie.from(
+                        "refreshToken",
+                        result.getRefreshToken()
+                )
+                .httpOnly(true)
+                .secure(false) // true in production (HTTPS)
+                .sameSite("Lax")
+                .path("/auth/refresh")
+                .maxAge(Duration.ofDays(7))
+                .build();
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.add(HttpHeaders.SET_COOKIE, refreshCookie.toString());
+
+        return ResponseEntity.ok()
+                .headers(headers)
+                .body(new AuthResponse().accessToken(result.getAccessToken()).user(result.getUser()));
     }
 
     @Override
@@ -65,10 +86,22 @@ public class AuthenticationController implements AuthenticationFlowApi {
     }
 
     @Override
-    public ResponseEntity<User> authSignup(SignupRequest signupRequest) {
+    public ResponseEntity<AuthResponse> authSignup(SignupRequest signupRequest) {
         try {
-            User createdUser = authService.signup(signupRequest);
-            return ResponseEntity.status(HttpStatus.CREATED).body(createdUser);
+            AuthResult result = authService.signup(signupRequest);
+            ResponseCookie refreshCookie = ResponseCookie.from("refreshToken", result.getRefreshToken())
+                    .httpOnly(true)
+                    .secure(false) // true in production (HTTPS)
+                    .sameSite("Lax")
+                    .path("/auth/refresh-token")
+                    .maxAge(Duration.ofDays(7))
+                    .build();
+            HttpHeaders headers = new HttpHeaders();
+            headers.add(HttpHeaders.SET_COOKIE, refreshCookie.toString());
+
+            return ResponseEntity.status(HttpStatus.CREATED)
+                    .headers(headers)
+                    .body(new AuthResponse().accessToken(result.getAccessToken()).user(result.getUser()));
         } catch (MessagingException | IOException ex) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(null);
         }
